@@ -10,6 +10,9 @@ dpkg (1.14.13) UNRELEASED; urgency=low
     of using symlinks). The space requirements are minimal and adding
     the needed dependencies to comply with policy would be way more
     inconvenient. Pointed out by Rene Engelhard. Closes: #452730
+  * Allow more than one arch and more than one type of a package
+    in debian/files. Parts of the patch by Goswin von Brederlow
+    and Bastian Blank. Closes: #356299, #377400, #229143
 
   [ Updated man pages translations ]
   * Swedish (Peter Karlsson)
